--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,31 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
+import SpaceBackground from '../components/SpaceBackground.astro';
+import Footer from '../components/Footer.astro';
+import ScrollAnimation from '../components/ScrollAnimation.jsx';
 
+import Hero from '../sections/Hero.astro';
+import Education from '../sections/Education.astro';
+import Projects from '../sections/Projects.astro';
+import Skills from '../sections/Skills.astro';
+import Personal from '../sections/Personal.astro';
+
+import '../styles/scene.css';
+import Experience from '../sections/Experience.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout title="Homepage">
+  <SpaceBackground />
+  <ScrollAnimation client:load />
+
+  <div class="relative z-10 text-white">
+    <Hero />
+    <Experience />
+    <Projects />
+    <Skills />
+    <Education />
+    <Personal />
+  </div>
+
+  <Footer />
+</BaseLayout>
