--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -8,7 +8,7 @@ const { title, description, href } = Astro.props;
   </h4>
 
   <p
-    class="text-white/70 leading-[1.9] paragraph glow-hover text-justify text-sm"
+    class="text-white/70 leading-[1.9] paragraph glow-hover text-left text-sm"
   >
     {description}
   </p>
