--- a/src/sections/Experience.astro
+++ b/src/sections/Experience.astro
@@ -6,10 +6,10 @@ import GlassSection from '../components/GlassSection.astro';
 <GlassSection>
   <section class="experience-container">
     <div>
-      <h1 class="text-5xl glow font-semibold section-title">Experience</h1>
+      <h1 class="text-3xl md:text-5xl glow font-semibold section-title">Experience</h1>
 
       <!--MPTC -->
-      <div class="flex justify-between items-start gap-8 py-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div>
@@ -17,8 +17,7 @@ import GlassSection from '../components/GlassSection.astro';
               <a
                 href="https://mptc.gov.kh/"
                 target="_blank"
-                rel="noopener
-            noreferrer"
+                rel="noopenernoreferrer"
                 class="hover:underline"
               >
                 Ministry of Post and Telecommunications
@@ -27,7 +26,7 @@ import GlassSection from '../components/GlassSection.astro';
           </div>
           <div class="mb-4">
             <h3 class="glow-hover text-lg mt-2 mb-4">
-              UX/UI & Content - Intern
+              UX/UI Intern
             </h3>
 
             <h4 class="text-base glow-hover mt-2 mb-4">
@@ -52,7 +51,7 @@ import GlassSection from '../components/GlassSection.astro';
               August 2025 – Present
             </h4>
 
-            <p class="paragraph glow-hover mb-4">
+            <p class="paragraph glow-hover mb-4 leading-[1.9] text-justify">
               Transitioned into a frontend engineering role, contributing to the
               development and maintenance of national digital platforms
               including EventKH and DSDP. Implement responsive, component-based
@@ -64,7 +63,7 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
 
         <!-- RIGHT LOGO -->
-        <div class="shrink-0 logo">
+        <div class="shrink-0 logo hidden md:block">
           <img
             src="/logos/mptc-logo.png"
             alt="MPTC Logo"
@@ -74,7 +73,7 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!--CSC -->
-      <div class="flex justify-between items-start gap-8 py-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div class="">
@@ -111,7 +110,7 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
 
         <!-- RIGHT LOGO -->
-        <div class="shrink-0 logo">
+        <div class="shrink-0 logo hidden md:block">
           <img
             src="/logos/csc-logo2.png"
             alt="CSC Logo"
@@ -121,7 +120,7 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!-- Kakvei -->
-      <div class="flex justify-between items-start gap-8 py-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div>
@@ -141,7 +140,7 @@ import GlassSection from '../components/GlassSection.astro';
           <h3 class="glow-hover text-lg mt-2 mb-4">Data Organizer</h3>
           <div class="mb-4">
             <h4 class="text-base glow-hover mt-2 mb-4">
-              February 2023 – Present
+              February 2023 – December 2025
             </h4>
 
             <p class="paragraph glow-hover mb-4 leading-[1.9] text-justify">
@@ -154,7 +153,7 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
 
         <!-- RIGHT LOGO -->
-        <div class="shrink-0 logo">
+        <div class="shrink-0 logo hidden md:block">
           <img
             src="/logos/kakvei-logo2.png"
             alt="Kakvei Logo"
