--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -5,18 +5,17 @@ import GlassSection from '../components/GlassSection.astro';
 <GlassSection>
   <section>
     <div>
-      <h2 class="text-5xl glow font-semibold section-title">Projects</h2>
+      <h2 class="text-3xl md:text-5xl glow font-semibold section-title">Projects</h2>
 
       <!-- DSSDP -->
-      <div class="flex justify-between items-start gap-8 py-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <h2 class="glow-hover text-2xl mb-4">
             <a
               href="https://dsdp.gov.kh/en/"
               target="_blank"
-              rel="noopener
-            noreferrer"
+              rel="noopener noreferrer"
               class="hover:underline"
             >
               Digital Skills Development Program (DSDP)
@@ -45,7 +44,7 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
 
         <!-- RIGHT LOGO -->
-        <div class="shrink-0 logo">
+        <div class="shrink-0 logo hidden md:block">
           <img
             src="/logos/dsdp-logo.png"
             alt="DSDP Logo"
@@ -55,15 +54,14 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!-- EventKH -->
-      <div class="flex justify-between items-start gap-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <h2 class="glow-hover text-2xl mb-4">
             <a
               href="https://event.gov.kh/en"
               target="_blank"
-              rel="noopener
-            noreferrer"
+              rel="noopener noreferrer"
               class="hover:underline"
             >
               EventKH
@@ -90,7 +88,7 @@ import GlassSection from '../components/GlassSection.astro';
             </p>
           </div>
         </div>
-        <div class="shrink-0 logo">
+        <div class="shrink-0 logo hidden md:block">
           <img
             src="/logos/eventkh-logo.png"
             alt="EventKH Logo"
@@ -100,7 +98,7 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!-- CTM -->
-      <div class="flex justify-between items-start gap-8 py-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <h2 class="glow-hover text-2xl mb-4">
@@ -136,7 +134,7 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
 
         <!-- RIGHT LOGO -->
-        <div class="shrink-0 logo">
+        <div class="shrink-0 logo hidden md:block">
           <img
             src="/logos/ctm-logo.png"
             alt="Chaktomuk Logo"
