updated Hero section content

--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -7,9 +7,7 @@ const { title, description, href } = Astro.props;
     {title}
   </h4>
 
-  <p
-    class="text-white/70 leading-[1.9] paragraph glow-hover text-left text-sm"
-  >
+  <p class="text-white/70 leading-[1.9] paragraph glow-hover text-left text-sm">
     {description}
   </p>
 </a>
