--- a/src/sections/Education.astro
+++ b/src/sections/Education.astro
@@ -5,9 +5,13 @@ import GlassSection from '../components/GlassSection.astro';
 <GlassSection>
   <section>
     <div>
-      <h2 class="text-3xl md:text-5xl glow font-semibold section-title">Education</h2>
+      <h2 class="text-3xl md:text-5xl glow font-semibold section-title">
+        Education
+      </h2>
 
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div>
@@ -46,7 +50,9 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
       </div>
 
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div>
@@ -86,15 +92,3 @@ import GlassSection from '../components/GlassSection.astro';
     </div>
   </section>
 </GlassSection>
-
-<!-- <h2 class="glow-hover text-2xl mb-4 mt-2">
-              <a
-                href="https://www.aupp.edu.kh/"
-                target="_blank"
-                rel="noopener
-            noreferrer"
-                class="hover:underline"
-              >
-                American University of Phnom Penh
-              </a>
-            </h2> -->
