--- a/src/sections/Personal.astro
+++ b/src/sections/Personal.astro
@@ -6,7 +6,9 @@ import GlassSection from '../components/GlassSection.astro';
 <GlassSection>
   <section>
     <div>
-      <h1 class="text-3xl md:text-5xl glow font-semibold section-title">Contact Me</h1>
+      <h1 class="text-3xl md:text-5xl glow font-semibold section-title">
+        Contact Me
+      </h1>
 
       <div class="max-w-2xl mx-auto px-4 md:px-0">
         <p class="paragraph glow-hover mb-4 leading-[1.9] text-center">
@@ -16,7 +18,9 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
       <!--  -->
       <div>
-        <h2 class="text-xl md:text-2xl glow-hover text-left mt-8 mb-4">Professional</h2>
+        <h2 class="text-xl md:text-2xl glow-hover text-left mt-8 mb-4">
+          Professional
+        </h2>
 
         <div class="flex flex-col sm:flex-row sm:flex-wrap gap-4">
           <div>
@@ -55,7 +59,9 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
       <!--  -->
       <div>
-        <h2 class="text-xl md:text-2xl glow-hover text-left mt-8 mb-4">Direct Contact</h2>
+        <h2 class="text-xl md:text-2xl glow-hover text-left mt-8 mb-4">
+          Direct Contact
+        </h2>
 
         <div class="flex flex-col sm:flex-row sm:flex-wrap gap-4">
           <div>
@@ -72,7 +78,11 @@ import GlassSection from '../components/GlassSection.astro';
           <div>
             <Button href="https://t.me/Spades_Of_Ace">
               <span class="flex items-center gap-2">
-                <img src="/icons/telegram-svg.svg" alt="Telegram" class="w-8 h-8" />
+                <img
+                  src="/icons/telegram-svg.svg"
+                  alt="Telegram"
+                  class="w-8 h-8"
+                />
                 Telegram
               </span>
             </Button>
@@ -80,16 +90,20 @@ import GlassSection from '../components/GlassSection.astro';
         </div>
       </div>
       <!--  -->
-            <div>
-        <h2 class="text-xl md:text-2xl glow-hover text-left mt-8 mb-4">Social</h2>
+      <div>
+        <h2 class="text-xl md:text-2xl glow-hover text-left mt-8 mb-4">
+          Social
+        </h2>
 
         <div class="flex flex-col sm:flex-row sm:flex-wrap gap-4">
           <div>
-            <Button
-              href="https://www.facebook.com/Spade.0f.ace/"
-            >
+            <Button href="https://www.facebook.com/Spade.0f.ace/">
               <span class="flex items-center gap-2">
-                <img src="/icons/facebook-svg.svg" alt="Facebook" class="w-8 h-8" />
+                <img
+                  src="/icons/facebook-svg.svg"
+                  alt="Facebook"
+                  class="w-8 h-8"
+                />
                 Facebook
               </span>
             </Button>
