--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -5,10 +5,14 @@ import GlassSection from '../components/GlassSection.astro';
 <GlassSection>
   <section>
     <div>
-      <h2 class="text-3xl md:text-5xl glow font-semibold section-title">Projects</h2>
+      <h2 class="text-3xl md:text-5xl glow font-semibold section-title">
+        Projects
+      </h2>
 
       <!-- DSSDP -->
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <h2 class="glow-hover text-2xl mb-4">
@@ -54,7 +58,9 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!-- EventKH -->
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <h2 class="glow-hover text-2xl mb-4">
@@ -98,7 +104,9 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!-- CTM -->
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <h2 class="glow-hover text-2xl mb-4">
