--- a/src/sections/Experience.astro
+++ b/src/sections/Experience.astro
@@ -6,10 +6,14 @@ import GlassSection from '../components/GlassSection.astro';
 <GlassSection>
   <section class="experience-container">
     <div>
-      <h1 class="text-3xl md:text-5xl glow font-semibold section-title">Experience</h1>
+      <h1 class="text-3xl md:text-5xl glow font-semibold section-title">
+        Experience
+      </h1>
 
       <!--MPTC -->
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div>
@@ -25,14 +29,12 @@ import GlassSection from '../components/GlassSection.astro';
             </h2>
           </div>
 
-                    <div class="mb-4">
+          <div class="mb-4">
             <h3 class="glow-hover text-lg mt-2 mb-4">
               Junior Front-End Developer
             </h3>
 
-            <h4 class="text-base glow-hover mt-2 mb-4">
-              May 2025 – Present
-            </h4>
+            <h4 class="text-base glow-hover mt-2 mb-4">May 2025 – Present</h4>
 
             <p class="paragraph glow-hover mb-4 leading-[1.9] text-justify">
               Transitioned into a frontend engineering role, contributing to the
@@ -44,13 +46,9 @@ import GlassSection from '../components/GlassSection.astro';
             </p>
           </div>
           <div class="mb-4">
-            <h3 class="glow-hover text-lg mt-2 mb-4">
-              UX/UI Intern
-            </h3>
+            <h3 class="glow-hover text-lg mt-2 mb-4">UX/UI Intern</h3>
 
-            <h4 class="text-base glow-hover mt-2 mb-4">
-              May 2024 – May 2025
-            </h4>
+            <h4 class="text-base glow-hover mt-2 mb-4">May 2024 – May 2025</h4>
 
             <p class="paragraph glow-hover mb-4 leading-[1.9] text-justify">
               Contributed to UX/UI design refinement and digital content
@@ -60,7 +58,6 @@ import GlassSection from '../components/GlassSection.astro';
               accessibility, and usability across ministries.
             </p>
           </div>
-
         </div>
 
         <!-- RIGHT LOGO -->
@@ -74,7 +71,9 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!--CSC -->
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div class="">
@@ -121,7 +120,9 @@ import GlassSection from '../components/GlassSection.astro';
       </div>
 
       <!-- Kakvei -->
-      <div class="flex flex-col md:flex-row justify-between items-start gap-8 py-8">
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 py-8"
+      >
         <!-- LEFT CONTENT -->
         <div class="flex-1">
           <div>
